hphp/hack/test/decl/prop_without_visibility_modifier.php.typecheck.exp
File "prop_without_visibility_modifier.php", line 4, characters 3-18:
Property declarations require a visibility modifier such as `public`, `private` or `protected`. (Parsing[1002])
