hphp/hack/test/decl/prop_without_visibility_modifier.php
<?hh

class C {
  static ?bool $b;
}
